# StableSteering

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  RELEASE.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  package-lock.json  package.json  playwright.config.js  playwright.real.config.js  pyproject.toml
app/: README.md  __init__.py  frontend_trace.py  main.py
data/: README.md
docs/: README.md  configuration_manual.md  developer_guide.md  document_audit.md  faq.md  motivation.md  noam_contribution_report.md  pre_implementation_blueprint.md  project_contribution_report.md  quick_start.md  research_improvement_roadmap.md  student_tutorial.md  system_improvement_roadmap.md  system_spec_legacy_combined.md  system_specification.md  system_test_specification.md  theoretical_background.md  user_guide.md
models/: README.md
output/: README.md
paper/: README.md  caption_style_guide.md  case_study_summary.md  claim_audit.md  claim_evidence_matrix.md  contribution_statement.md  evidence_inventory.md  experiment_execution_queue.md  experiment_matrix.md  figure_table_inventory.md  improvement_log.md  journal_appendix.html  journal_appendix.md  journal_manuscript.html  journal_manuscript.md  manuscript_draft.html  manuscript_draft.md  manuscript_outline.md  paper_improvement_cycles.md  paper_package_inventory.md  paper_readiness_map.md  publication_plan.md  reader_confusion_notes.md  references.bib  related_work_draft.md  related_work_scaffold.md  reproducibility_checklist.md  terminology_ledger.md  title_abstract_variants.md
scripts/: README.md  bootstrap.ps1  (+38 more)
(+1954 files in other folders)
