[project]
name = "stablesteering"
version = "0.1.0"
description = "Research prototype for interactive prompt-embedding steering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "huggingface-hub>=0.26.0",
  "jinja2>=3.1.4",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.2",
  "rich>=13.9.0",
  "uvicorn>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "markdown>=3.7",
  "pytest>=8.3.3",
]
inference = [
  "accelerate>=0.34.2",
  "diffusers>=0.37.0",
  "pillow>=11.0.0",
  "safetensors>=0.4.5",
  "torch>=2.4.0",
  "transformers>=4.45.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
